// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetailsViewOverlay renders with content open 1`] = `
<React.Fragment>
  <PreviewFeaturesPanel
    deps={
      {
        "assessmentActionMessageCreator": {
          "addFailureInstance": null,
        },
        "contentActionMessageCreator": {},
        "contentProvider": {},
        "settingsProvider": {},
        "userConfigMessageCreator": {},
      }
    }
    featureFlagData={{}}
    isOpen={true}
    previewFeatureFlagsHandler={
      {
        "getDisplayableFeatureFlags": null,
      }
    }
  />
  <ScopingPanel
    deps={
      {
        "assessmentActionMessageCreator": {
          "addFailureInstance": null,
        },
        "contentActionMessageCreator": {},
        "contentProvider": {},
        "settingsProvider": {},
        "userConfigMessageCreator": {},
      }
    }
    featureFlagData={{}}
    inspectActionMessageCreator={
      {
        "changeInspectMode": null,
      }
    }
    isOpen={true}
    scopingActionMessageCreator={
      {
        "addSelector": null,
      }
    }
    scopingSelectorsData={{}}
  />
  <ContentPanel
    content="content/path"
    deps={
      {
        "assessmentActionMessageCreator": {
          "addFailureInstance": null,
        },
        "contentActionMessageCreator": {},
        "contentProvider": {},
        "settingsProvider": {},
        "userConfigMessageCreator": {},
      }
    }
    isOpen={true}
  />
  <SettingsPanel
    deps={
      {
        "assessmentActionMessageCreator": {
          "addFailureInstance": null,
        },
        "contentActionMessageCreator": {},
        "contentProvider": {},
        "settingsProvider": {},
        "userConfigMessageCreator": {},
      }
    }
    featureFlagData={{}}
    userConfigStoreState={{}}
  />
</React.Fragment>
`;

exports[`DetailsViewOverlay renders with preview features open 1`] = `
<React.Fragment>
  <PreviewFeaturesPanel
    deps={
      {
        "assessmentActionMessageCreator": {
          "addFailureInstance": null,
        },
        "contentActionMessageCreator": {},
        "contentProvider": {},
        "settingsProvider": {},
        "userConfigMessageCreator": {},
      }
    }
    featureFlagData={{}}
    isOpen={true}
    previewFeatureFlagsHandler={
      {
        "getDisplayableFeatureFlags": null,
      }
    }
  />
  <ScopingPanel
    deps={
      {
        "assessmentActionMessageCreator": {
          "addFailureInstance": null,
        },
        "contentActionMessageCreator": {},
        "contentProvider": {},
        "settingsProvider": {},
        "userConfigMessageCreator": {},
      }
    }
    featureFlagData={{}}
    inspectActionMessageCreator={
      {
        "changeInspectMode": null,
      }
    }
    isOpen={true}
    scopingActionMessageCreator={
      {
        "addSelector": null,
      }
    }
    scopingSelectorsData={{}}
  />
  <ContentPanel
    deps={
      {
        "assessmentActionMessageCreator": {
          "addFailureInstance": null,
        },
        "contentActionMessageCreator": {},
        "contentProvider": {},
        "settingsProvider": {},
        "userConfigMessageCreator": {},
      }
    }
  />
  <SettingsPanel
    deps={
      {
        "assessmentActionMessageCreator": {
          "addFailureInstance": null,
        },
        "contentActionMessageCreator": {},
        "contentProvider": {},
        "settingsProvider": {},
        "userConfigMessageCreator": {},
      }
    }
    featureFlagData={{}}
    userConfigStoreState={{}}
  />
</React.Fragment>
`;

exports[`DetailsViewOverlay renders with scoping open 1`] = `
<React.Fragment>
  <PreviewFeaturesPanel
    deps={
      {
        "assessmentActionMessageCreator": {
          "addFailureInstance": null,
        },
        "contentActionMessageCreator": {},
        "contentProvider": {},
        "settingsProvider": {},
        "userConfigMessageCreator": {},
      }
    }
    featureFlagData={{}}
    isOpen={false}
    previewFeatureFlagsHandler={
      {
        "getDisplayableFeatureFlags": null,
      }
    }
  />
  <ScopingPanel
    deps={
      {
        "assessmentActionMessageCreator": {
          "addFailureInstance": null,
        },
        "contentActionMessageCreator": {},
        "contentProvider": {},
        "settingsProvider": {},
        "userConfigMessageCreator": {},
      }
    }
    featureFlagData={{}}
    inspectActionMessageCreator={
      {
        "changeInspectMode": null,
      }
    }
    isOpen={true}
    scopingActionMessageCreator={
      {
        "addSelector": null,
      }
    }
    scopingSelectorsData={{}}
  />
  <ContentPanel
    deps={
      {
        "assessmentActionMessageCreator": {
          "addFailureInstance": null,
        },
        "contentActionMessageCreator": {},
        "contentProvider": {},
        "settingsProvider": {},
        "userConfigMessageCreator": {},
      }
    }
  />
  <SettingsPanel
    deps={
      {
        "assessmentActionMessageCreator": {
          "addFailureInstance": null,
        },
        "contentActionMessageCreator": {},
        "contentProvider": {},
        "settingsProvider": {},
        "userConfigMessageCreator": {},
      }
    }
    featureFlagData={{}}
    userConfigStoreState={{}}
  />
</React.Fragment>
`;

exports[`DetailsViewOverlay renders with settings false 1`] = `
<React.Fragment>
  <PreviewFeaturesPanel
    deps={
      {
        "assessmentActionMessageCreator": {
          "addFailureInstance": null,
        },
        "contentActionMessageCreator": {},
        "contentProvider": {},
        "settingsProvider": {},
        "userConfigMessageCreator": {},
      }
    }
    featureFlagData={{}}
    isOpen={true}
    previewFeatureFlagsHandler={
      {
        "getDisplayableFeatureFlags": null,
      }
    }
  />
  <ScopingPanel
    deps={
      {
        "assessmentActionMessageCreator": {
          "addFailureInstance": null,
        },
        "contentActionMessageCreator": {},
        "contentProvider": {},
        "settingsProvider": {},
        "userConfigMessageCreator": {},
      }
    }
    featureFlagData={{}}
    inspectActionMessageCreator={
      {
        "changeInspectMode": null,
      }
    }
    isOpen={true}
    scopingActionMessageCreator={
      {
        "addSelector": null,
      }
    }
    scopingSelectorsData={{}}
  />
  <ContentPanel
    content="content/path"
    deps={
      {
        "assessmentActionMessageCreator": {
          "addFailureInstance": null,
        },
        "contentActionMessageCreator": {},
        "contentProvider": {},
        "settingsProvider": {},
        "userConfigMessageCreator": {},
      }
    }
    isOpen={true}
  />
  <SettingsPanel
    deps={
      {
        "assessmentActionMessageCreator": {
          "addFailureInstance": null,
        },
        "contentActionMessageCreator": {},
        "contentProvider": {},
        "settingsProvider": {},
        "userConfigMessageCreator": {},
      }
    }
    featureFlagData={{}}
    isOpen={false}
    userConfigStoreState={{}}
  />
</React.Fragment>
`;

exports[`DetailsViewOverlay renders with settings panel open 1`] = `
<React.Fragment>
  <PreviewFeaturesPanel
    deps={
      {
        "assessmentActionMessageCreator": {
          "addFailureInstance": null,
        },
        "contentActionMessageCreator": {},
        "contentProvider": {},
        "settingsProvider": {},
        "userConfigMessageCreator": {},
      }
    }
    featureFlagData={{}}
    isOpen={true}
    previewFeatureFlagsHandler={
      {
        "getDisplayableFeatureFlags": null,
      }
    }
  />
  <ScopingPanel
    deps={
      {
        "assessmentActionMessageCreator": {
          "addFailureInstance": null,
        },
        "contentActionMessageCreator": {},
        "contentProvider": {},
        "settingsProvider": {},
        "userConfigMessageCreator": {},
      }
    }
    featureFlagData={{}}
    inspectActionMessageCreator={
      {
        "changeInspectMode": null,
      }
    }
    isOpen={true}
    scopingActionMessageCreator={
      {
        "addSelector": null,
      }
    }
    scopingSelectorsData={{}}
  />
  <ContentPanel
    content="content/path"
    deps={
      {
        "assessmentActionMessageCreator": {
          "addFailureInstance": null,
        },
        "contentActionMessageCreator": {},
        "contentProvider": {},
        "settingsProvider": {},
        "userConfigMessageCreator": {},
      }
    }
    isOpen={true}
  />
  <SettingsPanel
    deps={
      {
        "assessmentActionMessageCreator": {
          "addFailureInstance": null,
        },
        "contentActionMessageCreator": {},
        "contentProvider": {},
        "settingsProvider": {},
        "userConfigMessageCreator": {},
      }
    }
    featureFlagData={{}}
    isOpen={true}
    userConfigStoreState={{}}
  />
</React.Fragment>
`;
